added link to poster instructions in 2024 nav yml

--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -40,6 +40,8 @@
     href: /conferences/2024/biss-extended-abstract-call/
   - text: "---"
   - text: "Instructions"
+  - text: "Poster instructions"
+    href: /conferences/2024/submissions/posters/
   - text: "Submit extended abstract to BISS"
     href: /conferences/2024/biss-abstract-submission/
   - text: "TL;DR extended abstract submission"
