Changed to Keynote Speakers tdwg-2024-navigation.yml

--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -13,7 +13,7 @@
   menu:
   - text: "DRAFT Schedule"
     href: /conferences/2024/schedule/draft/
-  - text: "Keynotes"
+  - text: "Keynote Speakers"
     href: /conferences/2024/keynotes/
   - text: "Sessions"
     href: /conferences/2024/sessions/
