Added program to conf 2024 nav

--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -11,7 +11,9 @@
     href: /conferences/2024/code-of-conduct/faq/
 - text: "Program"
   menu:
-  - text: "DRAFT Schedule"
+  - text: "Full Program (Oxford Abstracts)"
+    href: https://virtual.oxfordabstracts.com/#/event/6771/program
+  - text: "Session Schedule"
     href: /conferences/2024/schedule/draft/
   - text: "Keynote Speakers"
     href: /conferences/2024/keynotes/
