Update tdwg-2024-navigation.yml  added moderators

--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -20,6 +20,7 @@
   - text: "Posters"
     href: /conferences/2024/submissions/posters/
   - text: "Moderators"
+    href: /conferences/2024/moderators/
   - text: "---"
   - text: "Calls"
   - text: "Why submit an extended abstract?"
