Added posters to 2024 navigation

--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -6,6 +6,8 @@
     href: https://virtual.oxfordabstracts.com/#/event/6771/program
   - text: "Keynote Speakers"
     href: /conferences/2024/keynotes/
+  - text: "Poster Abstracts and PDFs"
+    href: /conferences/2024/posters/
   - text: "Schedules"
     href: /conferences/2024/schedule/
   - text: "Session Descriptions"
