added 2025 to /conferences/ navigation.yml

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@
   - text: "Conferences"
     href: /conferences/
   - text: "---"
+  - text: "2025 - Bogotá, Colombia"
+    href: https://www.livingdata2025.com/index.html
   - text: "2024 - Ginowan, Okinawa, Japan"
     href: /conferences/2024/
   - text: "2023 - Hobart, Australia"
