--- a/_data/tdwg-2025-navigation.yml
+++ b/_data/tdwg-2025-navigation.yml
@@ -3,19 +3,19 @@
 - text: "Main Conference Website"
   href: https://www.livingdata2025.com/index.html
 - text: "Extended Abstracts in BISS"
-  - text: "Call for Extended Abstracts"
-  - text: "Why Submit an Extended Abstract"
+  - text: "CALL FOR ABSTRACTS"
+  - text: "Why Submit an Extended Abstract to BISS"
     href: /conferences/2025/why-extended-abstract/
   - text: "Call for Extended Abstracts"
     href: /conferences/2025/biss-extended-abstract-call/
   - text: "---"
-  - text: "Instructions for Authors"
+  - text: "INSTRUCTIONS FOR AUTHORS"
   - text: "Detailed Instructions for Submitting an Extended Abstract"
     href: /conferences/2025/biss-abstract-submission/
   - text: "Quick Instructions for Submitting an Extended Abstract"
     href: /conferences/2025/biss-abstracts-tldr/
   - text: "---"   
-  - text: "Instructions for Reviewers/Editors"
+  - text: "INSTRUCTIONS FOR REVIEWERS AND EDITORS"
   - text: "Detailed Instructions"
     href: /conferences/2025/biss-editing/
   - text: "Quick Instructions"
