Update navigation.yml -- added 2025 landing page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@
     href: /conferences/
   - text: "---"
   - text: "2025 - Bogotá, Colombia"
-    href: https://www.livingdata2025.com/index.html
+    href: /conferences/2025/
   - text: "2024 - Ginowan, Okinawa, Japan"
     href: /conferences/2024/
   - text: "2023 - Hobart, Australia"
