Update _config.yml added tdwg-2025-navigation

--- a/_config.yml
+++ b/_config.yml
@@ -62,3 +62,7 @@ defaults:
       path: conferences/2024
     values:
       navigation: tdwg-2024-navigation
+  - scope:
+      path: conferences/2025
+    values:
+      navigation: tdwg-2025-navigation
