Add 'TDWG Newsletter Archive' to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,6 +88,8 @@
   - text: "Contributing to the Website"
     href: /about/website-faq/
   - text: "---"
+  - text: "TDWG Newsletter Archive"
+    href: /about/newsletter-archive/
   - text: "Logos"
     href: /about/logos/
   - text: "Contact"
