Add 2026 conference entry to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@
   - text: "Conferences"
     href: /conferences/
   - text: "---"
+  - text: "2026 - Oslo, Norway"
+    href: /conferences/2026/
   - text: "2025 - Bogotá, Colombia"
     href: /conferences/2025/
   - text: "2024 - Ginowan, Okinawa, Japan"
