Add navigation menu for 2026 conference

--- a/_config.yml
+++ b/_config.yml
@@ -67,3 +67,7 @@ defaults:
       path: conferences/2025
     values:
       navigation: tdwg-2025-navigation
+  - scope:
+      path: conferences/2026
+    values:
+      navigation: tdwg-2026-navigation
