#603 Add call for volunteers to website navigation

--- a/_data/tdwg-2026-navigation.yml
+++ b/_data/tdwg-2026-navigation.yml
@@ -6,5 +6,7 @@
     href: /conferences/2026/call-for-sessions/
   - text: "Instructions for Session Proposals"
     href: /conferences/2026/session-instructions/
+- text: "Call for volunteers"
+  href: /news/2026/call-for-volunteers-tdwg-2026/
 - text: "Code of Conduct"
   href: /conferences/2026/code-of-conduct/
